--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
-    "chalk": "^5.2.0"
+    "chalk": "^5.2.0",
+    "node-dijkstra": "^2.5.0"
   },
   "engines": {
     "node": ">=16.13.0"
